--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
             <div class="header-container">
                 <div class="header-inner">
                     <div class="header-inner__logo logo">
-                        <a href="/"><img class="logo__image" src="../static/images/anixLogo.png" alt="Лого Аникс" /></a>
+                        <a href="/"><img class="logo__image" src="../static/images/globalsImages/anixLogo.png" alt="Лого Аникс" /></a>
                     </div>
                     <nav class="header-inner__navigation navigation" >
                         <ul class="navigation-menu">
@@ -66,8 +66,14 @@
                         <span class="profile-avatar-fio">Егор <br/> Черников</span>
                     </div>
                     <div class="toys-container">
-                        <img class="toys-icon" src="../static/images/mainPageImages/toyIcon.png" />
-                        <span class="toys-count">2 шт</span>
+                        <div class="toy-gold-container">
+                            <img class="toy-gold-icon" src="../static/images/globalsImages/toyRed0.png" />
+                            <span class="toys-count">0 шт</span>
+                        </div>
+                        <div class="toy-red-container">
+                            <img class="toy-red-icon" src="../static/images/globalsImages/toyRed0.png" />
+                            <span class="toys-count">0 шт</span>
+                        </div>
                     </div>
                     <div class="complete-progress">
                         <span class="complete-progress-count">40 из 40</span>
@@ -243,16 +249,17 @@
         </div>
     </div>
     <div class="sound-switch">
-        <img class="sound-switch-icon" id="soundSwitch" src="../static/images/soundOnIcon.png"/>
+        <img class="sound-switch-icon" id="soundSwitch" src="../static/images/globalsImages/soundOnIcon.png"/>
     </div>
     <footer class="footer" id="footer">
-        <img class="footer-elka" src="../static/images/elkaImage.png" />
+        <img class="footer-elka" src="../static/images/globalsImages/treeZeroGif.gif" />
+        <img class="footer-gifts" src="../static/images/globalsImages/giftsImage.png" />
     </footer>
     <script src="../static/js/puzzleGame.js"></script>
     <script src="../static/js/treasureGame.js"></script>
     <script src="../static/js/soundSwitch.js"></script>
     <script src="../static/js/ticTacGame.js"></script>
-    <script src="../static/js/casik.js"></script>
+    <script src="../static/js/wheelGame.js"></script>
 </body>
 </html>
 
