--- a/templates/prizesPage.html
+++ b/templates/prizesPage.html
@@ -13,7 +13,7 @@
             <div class="header-container">
                 <div class="header-inner">
                     <div class="header-inner__logo logo">
-                        <a href="index.html"><img class="logo__image" src="../static/images/anixLogo.png" alt="Лого Аникс" /></a>
+                        <a href="/"><img class="logo__image" src="../static/images/globalsImages/anixLogo.png" alt="Лого Аникс" /></a>
                     </div>
                     <nav class="header-inner__navigation navigation" >
                         <ul class="navigation-menu">
@@ -21,7 +21,7 @@
                                 Условия
                             </li>
                             <li class="navigation-menu__item">
-                                <a href="prizesPage.html">Подарки</a>
+                                <a href="/gifts">Подарки</a>
                             </li>
                             <li class="navigation-menu__item">
                                 Поставщики
@@ -148,10 +148,11 @@
         </div>
     </div>
     <div class="sound-switch">
-        <img class="sound-switch-icon" id="soundSwitch" src="../static/images/soundOnIcon.png"/>
+        <img class="sound-switch-icon" id="soundSwitch" src="../static/images/globalsImages/soundOnIcon.png"/>
     </div>
-    <footer class="footer">
-        <img class="footer-elka" src="../static/images/elkaImage.png" />
+    <footer class="footer" id="footer">
+        <img class="footer-elka" src="../static/images/globalsImages/treeZeroGif.gif" />
+        <img class="footer-gifts" src="../static/images/globalsImages/giftsImage.png" />
     </footer>
 </body>
 <script src="../static/js/soundSwitch.js"></script>
