--- a/static/css/miniGamesStyle/_wheelStyle.scss
+++ b/static/css/miniGamesStyle/_wheelStyle.scss
@@ -19,6 +19,12 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+
+  @include mobile {
+    width: 77vw;
+    height: 91vw;
+    border-radius: 4vw;
+  }
 }
 
 .wheel-game-heading {
@@ -27,10 +33,18 @@
   position: relative;
   padding-top: 1vw;
 
+  @include mobile {
+    padding-top: 3vw;
+  }
+
   &-text {
     font-size: 2vw;
     font-family: "Akshar", sans-serif;
     font-weight: 600;
+
+    @include mobile {
+      font-size: 6vw;
+    }
   }
 
   &-cross {
@@ -39,6 +53,11 @@
     position: absolute;
     cursor: pointer;
     right: -8vw;
+
+    @include mobile {
+      width: 5vw;
+      height: 5vw;
+    }
   }
 }
 
@@ -46,9 +65,14 @@
   height: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
   position: relative;
+
+  @include mobile {
+    height: 81%;
+    justify-content: center;
+  }
 }
 
 .wheel-container {
@@ -57,6 +81,11 @@
   height: 20vw;
   border-radius: 50%;
   overflow: hidden;
+
+  @include mobile {
+    width: 63vw;
+    height: 63vw;
+  }
 }
 
 .wheel {
@@ -94,6 +123,14 @@ button {
   margin-top: 1vw;
   font-size: 1.2vw;
   font-family: "Akshar", sans-serif;
+
+  @include mobile {
+    width: 41vw;
+    height: 7vw;
+    border-radius: 3vw;
+    margin-top: 2vw;
+    font-size: 4.2vw;
+  }
 }
 
 .icon-segment {
@@ -106,11 +143,17 @@ button {
 
 .pointer {
   display: flex;
-  position: relative;
-  top: 10.5vw;
-  left: -10.25vw;
+  position: absolute;
+  top: 11vw;
+  left: -1vw;
   border: 0.5vw solid transparent;
   border-left: 1vw solid #ff0000;
+  @include mobile {
+    top: 30vw;
+    left: -5vw;
+    border: 2.5vw solid transparent;
+    border-left: 5vw solid #ff0000;
+  }
 }
 
 
