--- a/static/css/miniGamesStyle/_wheelStyle.scss
+++ b/static/css/miniGamesStyle/_wheelStyle.scss
@@ -114,7 +114,7 @@
 .segment:nth-child(7) { background-color: #00BCD4; transform: rotate(270deg); }
 .segment:nth-child(8) { background-color: #8BC34A; transform: rotate(315deg); }
 
-button {
+.wheel-button {
   width: 10vw;
   height: 2vw;
   cursor: pointer;
