--- a/static/css/utils/_zero.scss
+++ b/static/css/utils/_zero.scss
@@ -108,6 +108,11 @@ button {
   font: inherit;
   padding: 0;
   color: currentColor;
+  border: none;
+}
+
+input:focus {
+  outline: none;
 }
 
 html {
