--- a/templates/login.html
+++ b/templates/login.html
@@ -38,7 +38,7 @@
         </div>
         <form class="login-form" method="post" onsubmit="handleLogin(event)">
             <div class="login-number-input-container">
-                <label class="login-number-text" for="logNumber">Телефон</label>
+                <label class="login-number-text" for="logNumber">Телефон 123</label>
                 <input class="login-number-input tel" type="text" name="number" id="logNumber" placeholder="Введите ваш номер телефона" />
             </div>
             <div class="login-submit-button-container">
